# learning-arduino-uno-q

./: .clangd  CMakeLists.txt  CMakePresets.json  readme.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: arduino_cli_targets.cmake  format.cmake
proto/: mcu.proto
scripts/: deploy.sh
src/: bridge.cc  main.cc
src/bridge/: bridge.cc  bridge.hh  main.cc
src/hello/: main.cc
src_mcu/: src_mcu.ino
src_mcu/hello/: hello.ino
src_mcu/rpc/: rpc.ino
